# flowertune-1b

./: .gitignore  README.md  centralized_train.py  config.yaml  pyproject.toml
flowertune_1b_v1/: __init__.py  client_app.py  dataset.py  models.py  server_app.py  strategy.py
