[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flowertune-1b-v1"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.18.0",
    "flwr-datasets>=0.5.0",
    "torch==2.4.0",
    "trl==0.8.1",
    "bitsandbytes==0.45.4",
    "scipy==1.13.0",
    "peft==0.6.2",
    "transformers==4.50.3",
    "sentencepiece==0.2.0",
    "omegaconf==2.3.0",
    "hf_transfer==0.1.8",
    "wandb",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "zhchen"

[tool.flwr.app.components]
serverapp = "flowertune_1b_v1.server_app:app"
clientapp = "flowertune_1b_v1.client_app:app"

[tool.flwr.app.config]
model.name = "meta-llama/Llama-3.2-1B"
model.quantization = 4
model.gradient-checkpointing = true
model.lora.peft-lora-r = 8
model.lora.peft-lora-alpha = 16
model.lora.peft-lora-dropout = 0.1
train.save-every-round = 1
train.learning-rate-max = 3e-4
train.learning-rate-min = 1e-6
train.seq-length = 1024
train.training-arguments.output-dir = ""
train.training-arguments.learning-rate = ""
train.training-arguments.per-device-train-batch-size = 8
train.training-arguments.gradient-accumulation-steps = 2
train.training-arguments.logging-steps = 10
train.training-arguments.num-train-epochs = 10
train.training-arguments.max-steps = 10
train.training-arguments.save-steps = 1000
train.training-arguments.save-total-limit = 10
train.training-arguments.gradient-checkpointing = true
train.training-arguments.lr-scheduler-type = "constant"
strategy.fraction-fit = 1.0
strategy.fraction-evaluate = 0.0
num-server-rounds = 200
wandb.use-wandb = false
wandb.project = "flwr-llama3.2-1b-dolly"
wandb.run-name-prefix = "client"
wandb.entity = ""


[tool.flwr.app.config.static]
dataset.name = "databricks/databricks-dolly-15k"

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 20
options.backend.client-resources.num-cpus = 1.0
options.backend.client-resources.num-gpus = 1.0
